--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -24,10 +24,7 @@
 
 <body>
 	<div class="pageTitle">
-		<div>
-			<h1>名刺no管理　競合を起こすぞ</h1>
-			<h1>競合２の編集を追加</h1>
-		</div>
+		<h1>名刺管理</h1>
 	</div>
 
 	<div class="container text-center">
